# os6

./: .configure.swp  .gitignore  .makefile.swp  bochsrc  configure  makefile  tags
kernel/: .CMakeLists.txt.swp  CMakeLists.txt  boot.S  debug.cpp  debug.hpp  linker.ld  main.cpp  system.hpp  util.hpp
kernel/.ccls-cache/@@home@thosakwe@Source@os6@kernel/: @usr@include@features.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-intn.h.blob  @usr@include@x86_64-linux-gnu@bits@stdint-uintn.h.blob  @usr@include@x86_64-linux-gnu@bits@time64.h.blob  @usr@include@x86_64-linux-gnu@bits@timesize.h.blob  @usr@include@x86_64-linux-gnu@bits@types.h.blob  @usr@include@x86_64-linux-gnu@bits@typesizes.h.blob  @usr@include@x86_64-linux-gnu@bits@wchar.h.blob  @usr@include@x86_64-linux-gnu@bits@wordsize.h.blob  @usr@include@x86_64-linux-gnu@gnu@stubs-64.h.blob  @usr@include@x86_64-linux-gnu@gnu@stubs.h.blob  @usr@include@x86_64-linux-gnu@sys@cdefs.h.blob  @usr@lib@llvm-10@lib@clang@10.0.0@include@__stddef_max_align_t.h.blob  @usr@lib@llvm-10@lib@clang@10.0.0@include@stdbool.h.blob  @usr@lib@llvm-10@lib@clang@10.0.0@include@stddef.h.blob  @usr@lib@llvm-10@lib@clang@10.0.0@include@stdint.h.blob
kernel/.ccls-cache/@home@thosakwe@Source@os6@kernel/: main.cpp.blob
kernel/include/: liballoc_1_1.h
